# Segment-based-classification

./: CMakeLists.txt  README  classify-scans.cpp  project_summary.txt  pviz.cpp  score-detections.cpp  setup.sh  timings.txt  train-classifier.cpp  train-dictionary.cpp
config/: example_test.xml  example_train.xml  final_test.xml  final_train.xml
lib/robovision/: BBox.cpp  CMakeLists.txt  Classifier.cpp  ColorGL.cpp  CompositeParameter.cpp  Laserscan.cpp  Math.cpp  NearestNeighborImpl.cpp  Normalizer.cpp  Objective.cpp  Optimization.cpp  Parameter.cpp  ParameterList.cpp  PointDescriptor.cpp  PrimitiveParameters.cpp  Random.cpp  ScaledCG.cpp  SegmentDescriptor.cpp  Stopwatch.cpp  StringTokenizer.cpp  Transform.cpp  opengl_utils.cpp  string_utils.cpp  tinyxml2.cpp
lib/robovision/rv/: BBox.h  Classifier.h  ColorGL.h  CompositeParameter.h  CoordinateSystems.h  Error.h  IOError.h  IndexedSegment.h  Laserscan.h  Math.h  NearestNeighborImpl.h  Normalizer.h  Objective.h  Optimization.h  OptimizationCallback.h  Parameter.h  ParameterList.h  PointDescriptor.h  PrimitiveParameters.h  Random.h  ScaledCG.h  SegmentDescriptor.h  Segmentation.h  Stopwatch.h  StringTokenizer.h  Transform.h  geometry.h  norms.h  opengl_utils.h  string_utils.h
project/: BagOfWordsDescriptor.cpp  BagOfWordsDescriptor.h  GridbasedSegmentation.cpp  GridbasedSegmentation.h  KMeans.cpp  KMeans.h  L2SoftmaxObjective.cpp  L2SoftmaxObjective.h  Octree.cpp  Octree.h  SoftmaxRegression.cpp  SoftmaxRegression.h  SpinImage.cpp  SpinImage.h  utils.cpp  utils.h
tests/: bow-test.cpp  kmeans-test.cpp  octree-test.cpp  segmentation-test.cpp  softmax-test.cpp  spinimage-test.cpp  test_utils.cpp  test_utils.h
widget/: CameraGL.h  CanvasGL.cpp  CanvasGL.h  PointCloudVisualizer.cpp  PointCloudVisualizer.h  pviz.ui
